--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="border-2 border-gray-300 rounded-lg p-4 flex-1"> <!-- Se añadió flex-1 aquí también -->
           <h2 class="text-xl">Actividades UVAs</h2>
           <div class="my-4">
-            <h3 class="text-l">UVA1</h3>
+            <h3 class="mb-2">UVA 1</h3>
             <ul>
               <li>
                 <a href="https://ldelia43.github.io/dyw-4/" class="text-blue-500"
@@ -174,7 +174,7 @@
             </ul>
           </div>
           <div class="my-4">
-            <h3>UVA2</h3>
+            <h3 class="mb-2">UVA 2</h3>
             <ul>
               <li>
                 <a href="https://ldelia43.github.io/dyw-2/" class="text-blue-500"
